# rust-react-graphql-sandbox

./: compose.api.yml  compose.db.yml  compose.yml  justfile
api/: Cargo.toml  Dockerfile  justfile
hop-query-api/: Cargo.toml  Dockerfile
hop-query-api/.sqlx/: query-0ede68eac584ed5a5229129d20c16203a48f14e7a66795af11520ec2decfee78.json  query-26ff88f52547e91b2112a1f4a597fde54e662373490821101dcf2c699de3ff4f.json  query-2a67d5364240e18ba2ae12672383033d8a6282f799bcc35980799630adfafddd.json  query-41072246b80f7e2bc9a76bc69122f4cd6c3323dc2af4845c81785e687b443698.json  query-425af726a5f909d796229356e7dd65f5ef284f52cde9db650617f1ddcfec7e95.json  query-4ac1172c9ce30174dcb04df1e173503f5d5ccdf55108f7b4e7792089f449e14d.json  query-64be58c0fbf4fb7739c2cd52460590b10c257b685e1d37d116858807370348a0.json  query-6972b8d4c16db29336afa85ed1ca6f3d389fbcf94cf31f96d0d23c290e020c8f.json  query-ad67097baa297d49d39986afc3b2520ba5f6b65b32734e5bddbbb14cf8dabd5b.json  query-e71490ae2391b039bcc0896b639141fe198d18a1e299f8b30cbc81f7dce3acb5.json  query-ec6b2a0e581d9ec3cd76442387db42963b060c7991d8105ce28bf9410666b6c1.json
hop-query-api/src/: inputs.rs  mutations.rs  queries.rs  router.rs  schema.rs  state.rs
hop-query-go/: config.go  go.mod  handler.go  justfile  main.go  marshaling.go  routes.go  server.go
hop-query-init/: 1_schema.sql  2_seed.sql
hop-query-ui/: .env.example  Dockerfile  biome.json  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite-env.d.ts  vite.config.ts
init/: 1_schema.sql
ui/: biome.json  package.json  pnpm-lock.yaml
(+17 files in other folders)
